<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_gesture_drone</name>
  <version>1.0.0</version>
  <description>
    Hand gesture controlled drone via MediaPipe + ROS 2 + PX4 (uXRCE-DDS).
    Supports: TAKEOFF, LAND, MOVE_LEFT, MOVE_RIGHT, HOVER.
  </description>

  <maintainer email="you@example.com">Abdelfattah</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
